--- a/index.html
+++ b/index.html
@@ -6,10 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>redcarti</title>
     <link rel="shortcut icon" href="/img/ico.png" type="image/png">
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
     <script defer src="/js/all.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://redcarti.github.io/css/jetbrainsmono.css" type="text/css">
+    <link rel="stylesheet" href="https://redcarti.github.io/css/main.css" type="text/css">
+    <style>
+        body {
+            margin: 0;
+            display: flex;
+            text-decoration: none;
+        }
+
+        .mainSection {
+            height: 100vh;
+            width: 100vw;
+            text-align: center;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            background-color: red;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .textSection, .iconsSection {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+        }
+        
+        .text, a {
+            font-family: 'JetBrains Mono', sans-serif;
+        }
+
+        a {
+            color: white;
+            display: flex;
+            font-size: 5vw;
+            margin: 0;
+        }
+
+        .text {
+            color: white;
+            display: flex;
+            font-size: 10vw;
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
     <section class="mainSection">
