--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection">
-            <p class="text">redcarti</p>
+            <p class="text">let redcarti = () => coding()</p>
         </div>
         
         <div class="iconsSection">
