--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         
         .text, a {
             font-family: 'JetBrains Mono', sans-serif;
+            letter-spacing: normal;
         }
 
         a {
