--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection">
-            <p class="text">let redcarti = () => coding()</p>
+            <p class="text">() => redcarti()</p>
         </div>
         
         <div class="iconsSection">
