--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
             font-size: 5vw;
             margin: 0;
         }
+        
+        .flex-item-margin {
+            margin: 10px;
+        }
     </style>
 </head>
 <body>
     <section class="mainSection">
-        <div class="textSection">
+        <div class="textSection flex-item-margin">
             <p class="text">() => redcarti()</p>
         </div>
         
-        <div class="iconsSection">
+        <div class="iconsSection flex-item-margin">
             <a href="https://github.com/redcarti">
                 <i class="fab fa-github"></i>
             </a>
