--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
             display: flex;
             text-decoration: none;
         }
+        
+        ::selection {
+            background-color: white;
+            color: red;
+        } 
+        ::-moz-selection {
+            background-color: white;
+            color: red;
+        } 
+        ::-webkit-selection {
+            background-color: white;
+            color: red;
+        }
 
         .mainSection {
             height: 100vh;
