--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
             text-decoration: none;
         }
         
-        ::selection {
-            background-color: white;
-            color: red;
-        } 
-        ::-moz-selection {
-            background-color: white;
-            color: red;
-        } 
-        ::-webkit-selection {
+        ::selection, ::-moz-selection, ::-webkit-selection {
             background-color: white;
             color: red;
         }
