--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="/js/all.js"></script>
     <link rel="stylesheet" href="https://redcarti.github.io/css/jetbrainsmono.css" type="text/css">
     <link rel="stylesheet" href="https://redcarti.github.io/css/main.css" type="text/css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
         body {
             margin: 0;
