--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section class="mainSection">
         <div class="textSection flex-item-margin">
             <p class="text">
-                () => redcarti()<span id="cursor">|</span>
+                <span id="cursor">|</span>
             </p>
         </div>
         
