--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
             'window.close()',
             '\'use strict\';',
             'let redcarti = require(\'redcarti\')',
-            'undefined === null'
+            'undefined === null',
+            '$(\'.text\').text(\'redcarti\')',
+            'html === \'programming language\'',
+            '!![] !== ![]',
+            '{ \'hi\': \'Hello World!\' }'
         ]
         
         let typingSpeed = [
