--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             justify-content: center;
             align-content: center;
             align-items: center;
+            max-width: 75vw;
         }
         
         .text, a {
