--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection flex-item-margin">
-            <p class="text">
-                <span id="cursor">|</span>
-            </p>
+            <p class="text"></p><span id="cursor">|</span>
         </div>
         
         <div class="iconsSection flex-item-margin">
