--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         }
         
         function cursorAnimation() {
-            $('#cursor').animate({
+            $('.cursor').animate({
                 opacity: 0
             }, 'fast', 'swing').animate({
                 opacity: 1
@@ -156,7 +156,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection flex-item-margin">
-            <p class="typing text"></p><span id="text cursor">|</span>
+            <p class="typing text"></p><span class="text cursor">|</span>
         </div>
         
         <div class="iconsSection flex-item-margin">
