--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
                 // If current sentence was last then display the first one, else move to the next
                 if(part == (typings.length - 1))
                     part = 0;
-                else
-                    part = getRandomInt(0, typings.length);
+                else {
+                    let v = getRandomInt(0, typings.length);
+                    console.log(v)
+                    part = v
+                }
 
                 partIndex = 0;
 
