--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection flex-item-margin">
-            <p class="typing text"></p><span class="text cursor">|</span>
+            <p class="typing text"><span class="text cursor">|</span></p>
         </div>
         
         <div class="iconsSection flex-item-margin">
