--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
         function Type() { 
             // Get substring with 1 characater added
             var text =  typings[part].substring(0, partIndex + 1);
-            $('.typing').contents().filter(() => this.nodeType === 3).text(text);
+            $('.typing').contents().filter((i, el) => {
+                console.log(i, el)
+            }).text(text);
             partIndex++;
 
             // If full sentence has been displayed then start to delete the sentence after some time
@@ -122,7 +124,9 @@
         function Delete() {
             // Get substring with 1 characater deleted
             var text =  typings[part].substring(0, partIndex - 1);
-            $('.typing').contents().filter(() => this.nodeType === 3).text(text);
+            $('.typing').contents().filter((i, el) => {
+                console.log(i, el)
+            }).text(text);
             partIndex--;
 
             // If sentence has been deleted then start to display the next sentence
