--- a/index.html
+++ b/index.html
@@ -156,10 +156,7 @@
 <body>
     <section class="mainSection">
         <div class="textSection flex-item-margin">
-            <p class="typing text">
-                <p class="inner" ></p>
-                <span class="text cursor">|</span>
-            </p>
+            <p class="typing text"><p class="inner"></p><span class="text cursor">|</span></p>
         </div>
         
         <div class="iconsSection flex-item-margin">
