--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 <body>
     <section class="mainSection">
         <div class="textSection flex-item-margin">
-            <p class="typing text">
-                <p class="inner" />
+            <div class="typing">
+                <p class="inner text" />
                 <span class="text cursor">|</span>
-            </p>
+            </div>
         </div>
         
         <div class="iconsSection flex-item-margin">
