--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <section class="mainSection">
         <div class="textSection flex-item-margin">
             <div class="typing">
-                <p class="inner text" />
+                <p class="inner text"></p>
                 <span class="text cursor">|</span>
             </div>
         </div>
