--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         .flex-item-margin {
             margin: 10px;
         }
+        
+        .typing {
+            display: flex;
+        }
     </style>
     <script>
         function getRandomInt(min, max) {
