--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         
         .typing {
             display: flex;
+            flex-wrap: wrap;
+        }
+        
+        .cursor {
+            flex: 0 0 auto;
         }
     </style>
     <script>
