--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         .cursor {
             flex: 0 0 auto;
         }
+        
+        p, span { display: inline; }
     </style>
     <script>
         function getRandomInt(min, max) {
