--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
         }
         
         .typing {
-            display: flex;
+            display: inline;
             flex-wrap: wrap;
+            white-space: normal;
         }
         
         .inner::after {
