--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             '\'use strict\'',
             'let redcarti = require(\'redcarti\')',
             'undefined === null',
-            '$(\'.inner\').text(\'redcarti\');',
+            '$(\'.inner\').text(\'redcarti\')',
             'html === \'programming language\'',
             '!![] !== ![]',
             '{ \'hi\': \'Hello World!\' }',
