--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin: 0;
             display: flex;
             text-decoration: none;
+            max-width: 100vw;
         }
         
         ::selection, ::-moz-selection, ::-webkit-selection {
