--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         .typing {
             display: flex;
             flex-wrap: wrap;
+            max-width: 75vw;
         }
         
         .inner::after {
