--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         }
         
         .typing {
-            display: flex;
-            flex-wrap: wrap;
+            display: inline;
             max-width: 75vw;
         }
         
