--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         .text {
             color: white;
             display: inline;
-            font-size: 5vw;
+            font-size: 5em;
             margin: 0;
         }
         
