--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         
         .typing {
             display: inline;
+            max-width: 75vw;
+            word-wrap: break-word;
         }
         
         .inner::after {
