--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             letter-spacing: normal;
         }
         
-        ::selection, ::-moz-selection, ::-webkit-selection {
+        *::selection, *::-moz-selection, *::-webkit-selection {
             background-color: white;
             color: red;
         }
