--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             letter-spacing: normal;
         }
         
-        *::selection, *::-moz-selection, *::-webkit-selection {
-            background-color: white;
-            color: red;
+        ::selection, ::-moz-selection, ::-webkit-selection {
+            background-color: white!important;
+            color: red!important;
         }
 
         .mainSection {
