--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             text-decoration: none;
             max-width: 100vw;
             -webkit-font-feature-settings: "liga" on, "calt" on;
+            font-feature-settings: "liga" on, "calt" on;
             -webkit-font-smoothing: antialiased;
+            font-smoothing: antialiased;
             text-rendering: optimizeLegibility;
             font-family: 'JetBrains Mono', sans-serif;
             letter-spacing: normal;
