--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
             -webkit-font-feature-settings: "liga" on, "calt" on;
             font-feature-settings: "liga" on, "calt" on;
             -webkit-font-smoothing: antialiased;
-            font-smoothing: antialiased;
             text-rendering: optimizeLegibility;
             font-family: 'JetBrains Mono', sans-serif;
             letter-spacing: normal;
         }
         
-        ::selection, ::-moz-selection, ::-webkit-selection {
+        p::selection, 
+        p::-moz-selection, 
+        p::-webkit-selection {
             background-color: white!important;
             color: red!important;
         }
