--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             }
         }
         
-        const jojo = () => throw new ReferenceError('is this a JoJo reference?')
+        const jojo = () => { throw new ReferenceError('is this a JoJo reference?') }
         //
         
         function getRandomInt(min, max) {
