--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>redcarti</title>
+    <!-- meta -->
+    <meta property="og:title" content="redcarti">
+    <meta property="og:description" content="can you define redcarti()?">
+    <meta property="og:image" content="/img/ico.png">
+    <meta property="og:url" content="https://redcarti.github.io">
+    <!-- -->
     <link rel="shortcut icon" href="/img/ico.png" type="image/png">
     <script defer src="/js/all.js"></script>
+    <!-- loading styles -->
     <link rel="stylesheet" href="https://redcarti.github.io/css/jetbrainsmono.css" type="text/css">
     <link rel="stylesheet" href="https://redcarti.github.io/css/main.css" type="text/css">
+    <!-- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <style>
         body {
