--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
             'throw new RedCartiError()',
             '// JetBrains Mono is best ever font',
             'hi()()()()(\'hi!\')',
-            '\'redcarti. and redcarti.\''
+            '\'redcarti. and redcarti.\'',
+            '// mathematicians are lazy. thats why im lazy but not a mathematician'
         ]
         
         let typingSpeed = [
